<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_divider"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/meny_category" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/bill"
            android:title="@string/menu_bill" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/book"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_best_sale"
            android:icon="@drawable/best_sale"
            android:title="@string/menu_best_sale" />
    </group>
    <group
        android:id="@+id/group_divider2"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/changepass"
            android:id="@+id/change_pass"
            android:title="Đổi mật khẩu"/>
        <item
            android:icon="@drawable/logout"
            android:id="@+id/log_out"
            android:title="Đăng xuất"/>


    </group>
</menu>
