<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myassignment.ui.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
<!--            app:destination="@id/nav_home_second" />-->
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.example.assignment.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->




    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.myassignment.ui.Statistic"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.myassignment.ui.Book"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />
    <fragment
        android:id="@+id/nav_best_sale"
        android:name="com.example.myassignment.ui.BestSale"
        android:label="@string/menu_best_sale"
        tools:layout="@layout/fragment_best_sale" />
    <fragment
        android:id="@+id/nav_bill"
        android:name="com.example.myassignment.ui.Bill"
        android:label="@string/menu_bill"
        tools:layout="@layout/fragment_bill" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.myassignment.ui.Category"
        android:label="@string/meny_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.myassignment.ui.User"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/change_pass"
        android:name="com.example.myassignment.ui.ChangePass"
        android:label="Đổi mật khẩu"
        tools:layout="@layout/fragment_change_pass" />
    <fragment
        android:id="@+id/log_out"
        android:name="com.example.myassignment.ui.Logout"
        android:label="Thoát"
        tools:layout="@layout/fragment_logout" />
</navigation>